@@ -8,7 +8,7 @@ CONST scroff = 0     'position of the script in the buffer
 CONST scrheap = 1    'position of the script's local vars in the buffer
 CONST scrstate = 2   'what the script is doing right now
 CONST scrptr = 3     'the execution pointer
-CONST scrargs = 4    'argument count
+CONST scrvars = 4    'variable (including arguments) count
 CONST scrret = 5     'the scripts current return value
 CONST curkind = 6    'kind of current statement
 CONST curvalue = 7   'value of current stament
@@ -18,6 +18,7 @@ CONST scrdepth = 10  'stack depth of current script
 CONST scrid = 11     'id number current script
 CONST curwaitarg = 12'wait state argument
 CONST scrsize = 13   'amount the script takes up in the buffer
+CONST scrargs = 14   'number of arguments
 '---INTERPRETER STATES---
 'suspended scripts have negative states
 CONST stnone = 0
